# ai-doctor-assistant

./: .gitignore  main.py  pyproject.toml
frontend/: .env.local
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  @ungap.js  bail.js  ccount.js  character-entities.js  comma-separated-tokens.js  date-fns.js  debug.js  decode-named-character-reference.js  dequal.js  devlop.js  estree-util-is-identifier-name.js  extend.js  has-flag.js  hast-util-to-jsx-runtime.js  hast-util-whitespace.js  html-url-attributes.js  inline-style-parser.js  is-plain-obj.js  longest-streak.js  lucide-react.js  markdown-table.js  mdast-util-find-and-replace.js  mdast-util-from-markdown.js  mdast-util-gfm-autolink-literal.js  mdast-util-gfm-footnote.js  mdast-util-gfm-strikethrough.js  mdast-util-gfm-table.js  mdast-util-gfm-task-list-item.js  mdast-util-gfm.js  mdast-util-phrasing.js  mdast-util-to-hast.js  mdast-util-to-markdown.js  mdast-util-to-string.js  micromark-core-commonmark.js  micromark-extension-gfm-autolink-literal.js  micromark-extension-gfm-footnote.js  micromark-extension-gfm-strikethrough.js  micromark-extension-gfm-table.js  micromark-extension-gfm-tagfilter.js  (+41 more)
frontend/.next/static/chunks/: webpack.js  (+1 more)
src/my_doctor_assistant/: cli.py
src/my_doctor_assistant/utils/: helper.py
(+29 files in other folders)
